[package]
name = "acfunlivedata-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
acfunlivedata-common = { version = "0.1.0", path = "../common" }
ahash = { version = "0.7.4", features = ["serde"] }
anyhow = "1.0.43"
async-graphql = { version = "2.9.10", features = ["log", "dataloader"] }
async-trait = "0.1.51"
axum = "0.1.3"
bb8 = "0.7.1"
cached = "0.25.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
env_logger = "0.9.0"
futures = "0.3.16"
log = "0.4.14"
once_cell = "1.8.0"
rand = "0.8.4"
rpassword = "5.0.1"
rusqlite = "0.25.3"
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tower = { version = "0.4.8", features = ["timeout", "limit", "load-shed", "util"] }
tower-http = { version = "0.1.1", features = ["compression-gzip", "auth", "fs"] }
