[package]
name = "acfunlivedata-common"
version = "0.1.0"
edition = "2018"

[dependencies]
acfunliveapi = { version = "0.1.0", git = "https://github.com/orzogc/acfunliveapi", branch = "main" }
acfunlivedanmaku = { version = "0.1.0", git = "https://github.com/orzogc/acfunliveapi", branch = "main" }
anyhow = "1.0.42"
asynchronous-codec = "0.6.0"
async-graphql = "2.9.10"
bincode = "1.3.3"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
encon = "0.0.3"
futures = "0.3.16"
highway = "0.6.4"
interprocess = { version = "1.1.1", default-features = false, features = ["nonblocking"] }
log = "0.4.14"
once_cell = "1.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["fs", "time"] }

[dev-dependencies]
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
