[package]
name = "acfunlivedata"
version = "0.1.0"
edition = "2018"

[dependencies]
acfunliveapi = { version = "0.1.0", git = "https://github.com/orzogc/acfunliveapi", branch = "main" }
acfunlivedanmaku = { version = "0.1.0", git = "https://github.com/orzogc/acfunliveapi", branch = "main" }
acfunlivedata-common = { version = "0.1.0", path = "../common" }
ahash = { version = "0.7.4", features = ["serde"] }
anyhow = "1.0.43"
#async-trait = "0.1.51"
#bb8 = "0.7.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
env_logger = "0.9.0"
futures = "0.3.16"
log = "0.4.14"
once_cell = "1.8.0"
rpassword = "5.0.1"
#rusqlite = { version = "0.25.3", features = ["chrono", "serde_json"] }
rusqlite = "0.25.3"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
