[package]
name = "acfunlivedata-tool"
version = "0.1.0"
edition = "2018"

[dependencies]
acfunlivedata-common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.42"
once_cell = "1.8.0"
rpassword = "5.0.1"
structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
